Graphql HOC & Health Screen Completed
Signed-off-by: Ankit Babbar <babbar.ankit@gmail.com>

--- a/TODO
+++ b/TODO
@@ -13,7 +13,7 @@ Server Todo:
 Website Todo:
   ✔ Initial Web Application @done(20-09-09 02:56)
   ✔ Web Storybook @done(20-09-09 03:25)
-  ☐ Health Screen
+  ✔ Health Screen @done(20-09-09 04:42)
   ☐ Health Screen Test
   ☐ Storybook - Auth Screen
   ☐ Storybook - Contact Screen
