--- a/TODO
+++ b/TODO
@@ -14,7 +14,7 @@ Website Todo:
   ✔ Initial Web Application @done(20-09-09 02:56)
   ✔ Web Storybook @done(20-09-09 03:25)
   ✔ Health Screen @done(20-09-09 04:42)
-  ☐ Health Screen Test
+  ✔ Health Screen Test @done(20-09-09 08:26)
   ☐ Storybook - Auth Screen
   ☐ Storybook - Contact Screen
   ☐ Auth Screen Test
