SignIn Storybook Completed
Signed-off-by: Ankit Babbar <babbar.ankit@gmail.com>

--- a/TODO
+++ b/TODO
@@ -15,7 +15,8 @@ Website Todo:
   ✔ Web Storybook @done(20-09-09 03:25)
   ✔ Health Screen @done(20-09-09 04:42)
   ✔ Health Screen Test @done(20-09-09 08:26)
-  ☐ Storybook - Auth Screen
+  ✔ Avatar @done(20-09-09 16:46)
+  ✔ Storybook - Auth Screen @done(20-09-09 16:46)
   ☐ Storybook - Contact Screen
   ☐ Auth Screen Test
   ☐ User Screen Test
