Added Infinite Scroll To Contacts Screen and Minor Theme Fixes
Signed-off-by: Ankit Babbar <babbar.ankit@gmail.com>

--- a/TODO
+++ b/TODO
@@ -30,7 +30,7 @@ Website Todo:
   ✔ Toast Integration @done(20-09-10 22:43)
   ✔ Oauth 2 Redirect @done(20-09-10 22:43)
   ✔ Contacts Screen Backend Integration @done(20-09-11 05:54)
-  ☐ Contact Screen Infinte Scroll
+  ✔ Contact Screen Infinte Scroll @done(20-09-11 06:44)
   ☐ Accessibilty Fixes
 
 DevOps Todo:
